--- a/templates/base.html
+++ b/templates/base.html
@@ -40,9 +40,9 @@
             <div class="header-container">
                 <a href="index.html" class="header-navlink">Guider</a>
                 <div class="header-menu">
-                    <a href="#" class="header-navlink1 Large">Home</a>
-                    <a href="#about" class="header-navlink1 Large">About</a>
-                    <a href="#impact" class="header-navlink1 Large">Impact</a>
+                    <a href="/" class="header-navlink1 Large">Home</a>
+                    <a href="/#about" class="header-navlink1 Large">About</a>
+                    <a href="/#impact" class="header-navlink1 Large">Impact</a>
                 </div>
                 <div class="header-container1">
                     <div data-role="BurgerMenu" class="header-burger-menu">
