--- a/static/css/base.css
+++ b/static/css/base.css
@@ -54,6 +54,18 @@ html * {
     -webkit-font-smoothing: antialiased;
 }
 
+.bg-blue-500 {
+    background-color: var(--dl-color-blue-500) !important;
+}
+
+.bg-primary-500 {
+    background-color: var(--dl-color-primary-500) !important;
+}
+
+.bg-secondary-700 {
+    background-color: var(--dl-color-secondary-700) !important;
+}
+
 body {
     font-weight: 400;
     font-style: normal;
