--- a/templates/home/result.html
+++ b/templates/home/result.html
@@ -9,13 +9,57 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     {% block nav %}{% endblock %}
-    <div class="vh-100">
-
-        {% for donut_data in page_scores %}
-            <div class="w-25 h-25">
-                <canvas id="donutChart{{ forloop.counter }}"></canvas>
+    <div class="bg-primary-500">
+        <div class="row">
+            <div class="col-12 border-bottom">
+                <div class="text-left p-3">
+                    <h3 class="font-bold text-white"><a href="/">Guider</a></h3>
+                </div>
             </div>
-        {% endfor %}
+            <div class="col-lg-8 col-sm-12 p-4">
+                <div class="col-12">
+                    <p style="color: #d1d1d1; font-size: 1.15rem">Your organization is:</p>
+                    <h1 class="my-2 text-white" style="font-size: 5rem;">Data Informed</h1>
+                    <p class="text-white w-75">The metrics shown below is based on the weighted calculation of answers
+                        you
+                        selected during the assessment. You can use this report to form informed decisions about your
+                        organization's next step</p>
+                </div>
+                <div class="row p-5 border-bottom">
+                    <div class="col-lg-3 col-sm-12 d-flex justify-content-center flex-column ">
+                        <p class="text-white">Overall Score</p>
+                        <h1 class="text-white" style="font-size: 5.5rem;">{{ overall_score }}<span
+                                style="font-size: 2rem;">&nbsp;%</span></h1>
+                    </div>
+                    <div class="col-lg-9 col-sm-12 chart-grid" style="grid-template-columns: repeat({{ pages }}, 1fr)">
+                        {% for name, _, _ in page_scores %}
+                            <div class="d-flex flex-column justify-content-center align-items-center">
+                                <h4 class="text-white mb-4">{{ name }}</h4>
+                                <div class="w-75 h-75">
+                                    <canvas id="donutChart{{ forloop.counter }}"></canvas>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 hidden-sm border-left p-5">
+                <p class="text-white my-3" style="font-size: 1.1rem; text-align: justify;">
+                    This page shows your organization’s data maturity assessment results. Scoring is based off the three
+                    main categories, each of which includes notable themes.
+                </p>
+                <p  class="text-white my-4" style="font-size: 1.1rem; text-align: justify;">
+                    Use this URL to share this page with colleagues, funders, or anyone you choose:
+                </p>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" value="{{ request.build_absolute_uri }}" readonly>
+                            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Copy</button>
+                        </div>
+                    </div>
+            </div>
+        </div>
 
 
     </div>
