--- a/templates/home/result.html
+++ b/templates/home/result.html
@@ -54,8 +54,8 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" value="{{ request.build_absolute_uri }}" readonly>
-                            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Copy</button>
+                            <input type="text" class="form-control" id="copy-text" value="{{ request.build_absolute_uri }}" readonly>
+                            <button class="btn btn-outline-secondary" type="button" id="copy-button">Copy</button>
                         </div>
                     </div>
             </div>
@@ -68,6 +68,20 @@
 {% endblock content %}
 
 {% block script %}
+    <script>
+        const copyButton = document.getElementById('copy-button');
+        const copyText = document.getElementById('copy-text');
+
+        copyButton.addEventListener('click', () => {
+            const text = copyText.value;
+            navigator.clipboard.writeText(text).then(() => {
+                copyButton.innerHTML = 'Copied!';
+                setTimeout(() => {
+                    copyButton.innerHTML = 'Copy';
+                }, 2000);
+            });
+        });
+    </script>
     <script>
         const options = {
             legend: {
