added logic for categories and suggestions

--- a/templates/home/result.html
+++ b/templates/home/result.html
@@ -48,19 +48,20 @@
                     This page shows your organization’s data maturity assessment results. Scoring is based off the three
                     main categories, each of which includes notable themes.
                 </p>
-                <p  class="text-white my-4" style="font-size: 1.1rem; text-align: justify;">
+                <p class="text-white my-4" style="font-size: 1.1rem; text-align: justify;">
                     Use this URL to share this page with colleagues, funders, or anyone you choose:
                 </p>
                 <div class="row">
                     <div class="col-12">
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" id="copy-text" value="{{ request.build_absolute_uri }}" readonly>
+                            <input type="text" class="form-control" id="copy-text"
+                                   value="{{ request.build_absolute_uri }}" readonly>
                             <button class="btn btn-outline-secondary" type="button" id="copy-button">Copy</button>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
-
 
     </div>
 
