--- a/static/css/result.css
+++ b/static/css/result.css
@@ -5,6 +5,7 @@
 
 body{
     font-family: "DM Sans", monospace;
+    color: white;
 }
 
 .border-top{
@@ -31,7 +32,6 @@ body{
 .text-content {
     font-size: 18px;
     font-weight: 500;
-    color: #fff;
 }
 
 .text-06 {
@@ -39,14 +39,60 @@ body{
     color: rgba(255,255,255,0.6);
 }
 
-.h1 {
-    font-size: 2.5rem;
+.h {
     font-weight: 400;
     font-family: ClashDisplay, "Open Sans", sans-serif;
-    color: #fff;
+}
+
+.h.h1 {
+    font-size: 5rem;
+}
+
+.h.h2 {
+    font-size: 3.5rem;
+}
+
+.h.h3 {
+    font-size: 2rem;
 }
 
 .row{
     margin-left: 0;
     margin-right: 0;
+}
+
+.suggestion-card{
+    text-decoration: none;
+    color: white;
+    background: rgba(255, 255, 255, 0.05);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    justify-content: space-between;
+    transition: border .15s ease, background .15s ease;
+    width: 100%;
+}
+
+.page-description{
+    font-size: 1.1rem;
+    text-align: justify;
+    padding: 0 2rem 0 0;
+}
+
+.overall-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px solid rgba(255,255,255,0.2);
+}
+
+@media (max-width: 400px) {
+    .overall-container{
+        border: none;
+        border-bottom: 1px solid rgba(255,255,255,0.2);
+        margin-bottom: 2em;
+    }
 }
