--- a/templates/home/result.html
+++ b/templates/home/result.html
@@ -46,7 +46,7 @@
                         <h2 class="h h2">{{ page.name }}</h2>
 
                         <div class="row">
-                            <p class="col-sm-12 col-lg-9 page-description">{{ page.description }}</p>
+                            <p class="col-sm-12 col-lg-9 page-description">{{ page.result_description }}</p>
                             <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
                                 <div style="width: 190px; height: 190px;">
                                     <canvas class="donutChart{{ forloop.counter }}"></canvas>
@@ -58,7 +58,7 @@
                                 <p class="h mt-4 mb-2">Suggestions from our resource library.</p>
                             {% endif %}
                             <a href="{{ suggestion.url }}" class="suggestion-card mt-3">
-                                <p class="text-06">Guide</p>
+                                <p class="text-06">{{ suggestion.category.title }}</p>
                                 <h5 class="h h3">{{ suggestion.title }}</h5>
                                 <p class="card-text">{{ suggestion.caption }}</p>
                             </a>
